--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,12 @@
       "email": "mikus.rakis@gmail.com"
     }
   ],
-  "require": {}
+  "require": {
+    "twig/twig": "^3.7",
+    "nikic/fast-route": "^1.3",
+    "nesbot/carbon": "^2.71",
+    "guzzlehttp/guzzle": "^7.8",
+    "symfony/var-dumper": "^5.4",
+    "vlucas/phpdotenv": "^5.5"
+  }
 }
